squash bugs

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -60,7 +60,7 @@ div.header {
 }
 
 
-#title{
+#first{
   text-align: center;
   font-family: 'Fauna One', serif;
   font-size: 100px;
@@ -319,4 +319,3 @@ color: #00CED1;
     position: relative;
     bottom: 35px;
 }
-
